# Diamond-Raman-Modelling

./: .gitignore  CMakeLists.txt  README.md  diamond.cpp  diamond.h  fitting.cpp  fitting.h  input.in  laser.cpp  laser.h  main.cpp  plot_comparison.py  plot_pressure_profile.py  plot_signal.py  plot_simulation.py  raman.cpp  raman.h  settings.cpp  settings.h
